# prediction-market

./: .gitignore  Anchor.toml  README.md  package.json
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/prediction-market/src/instructions/: cancel_market.rs  claim_bet.rs  finalize_market.rs  initialize_market.rs  initialize_pools.rs  mod.rs  place_bet.rs
programs/prediction-market/src/state/: states.rs
tests/: prediction-market.ts
