[package]
name = "prediction-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
pyth-solana-receiver-sdk = "0.3.1"

